--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,10 @@
 plugins {
+    id 'antlr'
     id 'org.jetbrains.kotlin.jvm' version '1.3.72'
 }
+
+apply plugin: 'java'
+apply plugin: 'antlr'
 
 group 'org.example'
 version '1.0-SNAPSHOT'
@@ -10,8 +14,17 @@ repositories {
     jcenter()
 }
 
+// See https://github.com/gradle/gradle/issues/820
+configurations {
+    compile {
+        extendsFrom = extendsFrom.findAll { it != configurations.antlr }
+    }
+}
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    antlr "org.antlr:antlr4:4.7.1"
+    implementation "org.antlr:antlr4-runtime:4.7.1"
 }
 
 compileKotlin {
@@ -21,13 +34,16 @@ compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
 
+dependencies {
+    implementation 'net.dv8tion:JDA:4.1.1_156'
+    implementation 'org.reflections:reflections:0.9.10'
+    implementation 'org.mariadb.jdbc:mariadb-java-client:1.5.6'
+    implementation 'org.apache.commons:commons-text:1.9'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
+}
 
 dependencies {
-    compile 'net.dv8tion:JDA:4.1.1_156'
-    compile 'org.reflections:reflections:0.9.10'
-    compile 'org.mariadb.jdbc:mariadb-java-client:1.5.6'
-    compile 'org.apache.commons:commons-text:1.9'
-
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
-
+    testImplementation 'junit:junit:4.13'
 }
+
+compileKotlin.dependsOn generateGrammarSource
