--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,13 @@ compileTestKotlin {
 dependencies {
     compile 'net.dv8tion:JDA:4.1.1_156'
     compile 'org.reflections:reflections:0.9.10'
-    compile 'org.mariadb.jdbc:mariadb-java-client:1.5.6'
+//    compile 'org.mariadb.jdbc:mariadb-java-client:1.5.6'
     compile 'org.apache.commons:commons-text:1.9'
-
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
-
+    compile 'org.apache.logging.log4j:log4j-core:2.13.3'
+    compile 'com.fasterxml.jackson.core:jackson-core:2.11.3'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.11.3'
+    compile 'org.apache.commons:commons-pool2:2.9.0'
+    compile group: 'log4j', name: 'log4j', version: '1.2.17'
+    compile group: 'redis.clients', name: 'jedis', version: '3.3.0'
+    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.4.0'
 }
